# Event-Scheduler-Application

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-frontend.yml  deploy.yml
app/: main.py
app/api/v1/: admin.py  auth.py  events.py  health.py  invitations.py
app/auth/: dependencies.py
app/core/: config.py  logging.py
app/db/: seed.py
app/models/: __init__.py  event.py  event_attendee.py  invitation.py  user.py
app/schemas/: __init__.py  ai.py  attendee.py  event.py  invitation.py  user.py
app/services/: ai.py  attendee.py  event.py  invitation.py  user.py
app/tests/: test_ai.py  test_auth.py  test_db.py  test_events.py  test_rbac.py
docs/: swagger.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  index.css  main.tsx  types.ts
frontend/src/api/: auth.ts  client.ts  events.ts
frontend/src/components/: EventCard.tsx  InviteForm.tsx  Navbar.tsx  Pagination.tsx  RSVPButton.tsx
frontend/src/pages/: Admin.tsx  AuthCallback.tsx  CreateEditEvent.tsx  EventDetail.tsx  EventsList.tsx  Login.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py
